tests/fails/f19.t

terra foo()
    return -false
end
foo()
